# nas-music

./: .gitignore  README.md  config.example.yaml  jay.txt  pyproject.toml
src/nasmusic/cli/: __init__.py  app.py  download.py  library.py  metadata.py  playlist.py
src/nasmusic/core/: __init__.py  config.py  database.py  models.py
src/nasmusic/downloaders/: __init__.py  base.py  netease.py  qqmusic.py  spotify.py  youtube.py
src/nasmusic/metadata/: __init__.py  cover_art.py  lyrics.py  matcher.py  tagger.py
src/nasmusic/organizer/: __init__.py  converter.py  duplicates.py  mover.py  scanner.py
src/nasmusic/playlists/: __init__.py  exporter.py  importer.py  manager.py
src/nasmusic/utils/: __init__.py  filesystem.py  progress.py
