[project]
name = "nasmusic"
version = "0.2.0"
description = "NAS music library management system for Navidrome"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "yt-dlp>=2024.0",
    "mutagen>=1.47",
    "musicbrainzngs>=0.7",
    "pydub>=0.25",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
nasmusic = "nasmusic.cli.app:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nasmusic"]

[tool.ruff]
target-version = "py39"
line-length = 100
